chore: Fixed issue with collapse on change

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -3,31 +3,27 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer components {
   body {
+    height: 100vh;
     overflow: hidden;
+    background-color: chartreuse;
   }
+
+@layer components {
 
   kbd {
     @apply px-2 py-1.5 text-sm font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded-lg dark:bg-gray-600 dark:text-gray-100 dark:border-gray-500;
   }
 
-  .body-wrapper {
+  .layout-body {
     height: 100vh;
     width: 100vw;
     display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 60px 1fr;
+    grid-template-columns: 200px 1fr;
+    grid-template-rows: 1fr;
   }
 
-  .body {
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    overflow-x: hidden;
-    transition: all 0.3s ease-in-out;
-  }
-
-  .body.collapsed {
+  .layout-body.collapsed {
     grid-template-columns: 60px 1fr;
   }
 
